# amino

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .siph  .travis.yml  AUTHORS  COPYING  Doxyfile  Doxyfile.in  DoxygenLayout.xml  INSTALL  Makefile  Makefile-demo.am  Makefile-lisp.am  Makefile.am  README  aarxc.in  aminclude.am  animate.lisp  arxc  assimp.lisp  collada.lisp  colladatest.dae  configure.ac  curly.lisp  demo.pov  doc.lisp  docker-build.sh  docker-check.sh  draw.lisp  install-apt.sh  lexer.lisp  make-arxc.sh  mesh.lisp  org-compile.el  parameters.lisp  povray.lisp  robray-package.lisp  robray.asd  (+6 more)
.github/workflows/: ci.yml
debian/: README  changelog  control  copyright  libamino-collision-dev.install  libamino-dev.install  libamino-gl-dev.install  libamino-opt-clp-dev.install  libamino-opt-glpk-dev.install  libamino-planning-dev.install  libamino0.install
demo/: Makefile  Makefile.am  viewer.c
demo/baxter/: Makefile  baxter-collision.c  baxter-demo.c  baxter-demo.h  baxter-ik.c  baxter-ompl-sequence.c  baxter-ompl-workspace.c  baxter-ompl.c  baxter-ompl.cpp  baxter-plugin.c  baxter-simple.c  baxter-wksp.c  baxter.inc  baxter.lisp
demo/baxter-1/: Makefile  baxter-cl.c  baxter-rx.c
demo/baxter-raytrace/: baxter.lisp  scene.robray  scene.urdf
demo/build-script/: CMakeLists.txt  Makefile.example  README  baxter-simple.c
demo/cpython/: mat.py  scene-view.py  tf.py
demo/lisp/: amino-logo.lisp  baxter-ik-path.lisp  baxter-plan.lisp  baxter.lisp  box.lisp  logo.inc  ur5-ik-path.lisp
demo/pr2/: pr2-kitchen.lisp
demo/python/: baxter-view.py  test
demo/simple-rx/: Makefile  Makefile.example  scene.robray  simple-plugin.c  simple-procedural.c  simple-rx.c  simple-rx.inc  simple-scenefile.c  simple-thread.c  simple-torus.c  sync.c
demo/simple-rx/scene/: table.robray  table_class.robray  table_include.robray  table_include_class.robray
demo/tutorial/: CMakeLists.txt
demo/tutorial/plugin/7dof/: 7dof.robray  CMakeLists.txt
demo/tutorial/plugin/scenefile/: CMakeLists.txt  example.robray
demo/tutorial/python/: t0.0-vector.py  t0.1-matrix.py  t0.2-lls.py  t1-rotation.py  t2-tf.py  t3.0-scene.py  t3.1-robot.py  t3.2-scenefile.py  t3.2-urdf.py  t4.1-fk.py  t4.2-dk.py  t4.3-ik.py  t5.1-collision-check.py  t5.2-collision-dist.py  t6.1-motion-planning.py
demo/ur/: ur.lisp
demo/urdf/baxter/: Makefile.example  README  baxter-collision.c  baxter-demo.c  baxter-demo.h  baxter-ik-path.c  baxter-ik.c  baxter-ompl-sequence.c  baxter-ompl-workspace.c  baxter-ompl.c  baxter-simple.c  baxter-test.c  baxter-view.in  baxter-view.py  baxter-wksp-pp.cpp  baxter-wksp.c  baxter-wksp.py
demo/urdf/fetch/: fetch-view.in
demo/urdf/jaco/: jaco-ompl.c  jaco-view.c  jaco-view.in  jaco_robot.urdf.xacro
demo/urdf/mico/: mico-view.in  mico_robot.urdf.xacro
demo/urdf/schunk/: lwa4d-view.in  lwa4d_robot.urdf.xacro
demo/urdf/ur/: ur-view.c  ur.lisp  ur10-view.in
doc/: carousel.html  clapack-doc.c  clapack_doc.c  footer.html  header.html  la-doc.c  la_doc.c  lapack-doc.c  lapack_doc.c  style.css
doc/manual/: scenegraph.org
doc/md/: copying.md  copying.md.header  download.md  faq.md  gui.md  mainpage.md  scenecompiler.md  scenefile.md  tutorial.md
include/: amino.h  amino.hpp  amino_internal.h  wavefront_internal.h
include/amino/: aa_math.h  aa_mem.h  amino_gl.h  cblas_order.h.in  clapack.h  clapack_impl.h  const.h  ct.h  cv.h  debug.h  def.F90  def.h  diffeq.h  eigen_compat.hpp  endconv.h  getset.h  heap.h  io.h  kin.h  la.h  (+25 more)
java/: Lib.java  aminoj.c
lisp/: Makefile.am  amino-la.lisp  amino-opt.asd  amino-py.asd  amino-rx.asd  amino.asd  basic-ops.lisp  basic-type.lisp  blas-generic.lisp  blas.lisp  config-macro.lisp  config.lisp.in  ct-type.lisp  ct.lisp  deprecated.lisp  ffi.lisp  foreign-type.lisp  foreign.lisp  generic.lisp  grovel.lisp  io.lisp  libc.lisp  mem-type.lisp  mem.lisp  op.lisp  package.lisp  sparse.lisp  test.lisp  tf-grovel.lisp  tf-op.lisp  tf-type.lisp  tf.lisp  type.lisp  util.lisp  wrappers.lisp
lisp/mat/: mat-blas.lisp  mat-grovel.lisp  mat-init.lisp  mat-la.lisp  mat-lib.lisp  mat-macro.lisp
lisp/moveit-to-tmkit/: moveit-to-tmkit.lisp  moveit_scene.scene  moveit_scene_goal.robray
lisp/old/: blas.lisp
lisp/opt/: opt-foreign.lisp  opt-grovel.lisp  opt-lib.lisp  opt-matrix.lisp  opt-symbolic.lisp  opt.lisp
lisp/py/: package.lisp  user.lisp
lisp/rx/: animate.lisp  animation-plan.lisp  assimp.lisp  cl-init.lisp  collada.lisp  config.lisp  draw-extra.lisp  draw.lisp  driver.lisp  geom-bind.lisp  geom-type.lisp  lexer.lisp  mesh.lisp  parameters.lisp  povray.lisp  render.lisp  robray-package.lisp  rx-cl.lisp  rx-ct.lisp  rx-gl.lisp  rx-grovel.lisp  rx-ik.lisp  rx-lib.lisp  rx-mp.lisp  rx-sg.lisp  rx-type.lisp  rx-win.lisp  scenegraph.lisp  sdl-grovel.lisp  sg-cfun.lisp  sg-gen.lisp  sg-rope.lisp  trajectory.lisp  util.lisp  wavefront.lisp
lisp/rx/render/: mp-render.lisp
lisp/rx/robots/: baxter.lisp
lisp/rx/scenefile/: curly.lisp  moveit-to-tmkit.lisp  moveit.lisp  scenefile.lisp  urdf.lisp
python/: setup.py
scenefile/: curly.lisp  moveit.lisp  scenefile.lisp  urdf.lisp
script/: docker-build.sh  docker-check.sh  docker-make.sh  docker-push.sh  py_filter  py_format
scripts/: make-tarball  meshconv  povremote  upload-tarball
share/: aarxc  aarxpy  amino-collision.pc.in  amino-gl.pc.in  amino-planning.pc.in  amino.pc.in  amino_collision.pc.in  amino_gl.pc.in  amino_planning.pc.in  check-clpkg.sh  default.inc  doc.lisp  load-ql.lisp  load-quicklisp.lisp  make-aarx.lisp  make-aarx.sh  robray-mode.el
src/: aa_test.c  aa_testpp.cpp  amino_gl.c  amino_sdl.c  animate.lisp  are.c  assimp.lisp  clapack.c  clapack_impl.c  config.lisp  cv.c  debug.c  diffeq.c  draw.lisp  heap.c  inex.lisp  io.c  kin.c  la.c  la2.c  la_float.F90  la_impl.c  la_implf.F90  la_mod.F90  lexer.lisp  mat.c  math.c  mem.c  mem_impl.F90  mem_mod.F90  mesh.lisp  octree_gl.cpp  parameters.lisp  plot.c  povray.lisp  refcount.c  robray-package.lisp  scenegraph.lisp  sdl_handler.c  sdl_ui.c  (+13 more)
test/: baxter.inc  baxter.lisp  meshview.pov  scene.robray
(+264 files in other folders)
